ipc/ipdl/test/ipdl/error/conflictProtocolMsg.ipdl
protocol conflictProtocolMsg {

    // it's an error to re-use the protocol name as a message ID; these
    // are reserved
child:  conflictProtocolMsg();

};
